test scroll bug on iphone

--- a/src/app/pages/homepage/index.css
+++ b/src/app/pages/homepage/index.css
@@ -6,16 +6,18 @@ body {
   @media screen and (max-width: 1023px) {
     height: auto;
   } */
-  overflow-x: hidden;
 }
 
 .year-container {
   height: 100vh;
+  width: 100%;
   overflow-y: scroll;
+  overflow-x: hidden;
   scroll-snap-points-y: repeat(100vh);
   scroll-snap-destination: 0 0;
+  scroll-snap-type: mandatory;
   scroll-snap-type: y mandatory;
-  -webkit-overflow-scrolling: touch
+  -webkit-overflow-scrolling: touch;
 
   /* @media screen and (max-width: 1023px) {
     scroll-snap-type: unset;
@@ -193,6 +195,7 @@ body {
 
   & section.page {
     scroll-snap-align: none;
+    width: 100%;
   }
 
   /* & section.page {
